--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 .navbarcolor{
-    color:gray;
+    color:darkslateblue;
 }
 .navbarcolorandstrong{
-    color:gray;
+    color:darkslateblue;
     font-weight:bold;
 }
 
@@ -21,3 +21,19 @@
     top: 20px;
     left: 4.5%;
 }
+.center{
+    text-align:center;
+}
+.round{
+    width:140px;
+    height: 140px;
+    border-radius:50%;
+}
+.backcolor{
+    background: white;
+}
+.whitewords{
+    color:lightsteelblue;
+    text-shadow: 1px 1px 1px #215;
+}
+
